cabal-version: 2.2
name:          pab-blockfrost
version:       1.2.0.0
license:       Apache-2.0
maintainer:
  valentino.cerutti@joinplank.com, tomas.osiecki@joinplank.com

author:        Valentino Cerutti, Tomas Osiecki
homepage:
  https://github.com/joinplank/plutus-apps/tree/plank-pab-blockfrost/pab-blockfrost#readme

bug-reports:   https://github.com/joinplank/plutus-apps/issues
description:
  Please see the README on GitHub at <https://github.com/joinplank/plutus-apps/tree/plank-pab-blockfrost/pab-blockfrost#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Plutus.Blockfrost.Client
    Plutus.Blockfrost.Queries
    Plutus.Blockfrost.Responses
    Plutus.Blockfrost.Types
    Plutus.Blockfrost.Utils

  hs-source-dirs:  src

  --------------------
  -- Local components
  --------------------
  build-depends:
    , freer-extras             >=1.2.0
    , plutus-chain-index-core  >=1.2.0
    , plutus-ledger            >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , plutus-ledger-api
    , plutus-tx

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , aeson-qq
    , async
    , base               >=4.7 && <5
    , blockfrost-api
    , blockfrost-client
    , bytestring
    , cardano-api
    , containers
    , extra
    , freer-simple
    , hex-text
    , mtl
    , safe-money
    , text
