cabal-version: 3.0
name:          playground-common
version:       1.0.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

author:        David Smith
category:      Web
build-type:    Simple
data-files:    test/oAuthToken1.json

library
  exposed-modules:
    Auth
    Auth.Types
    Control.Monad.Now
    Control.Monad.Trace
    Control.Monad.Web
    Gist
    Language.Haskell.Interpreter
    Playground.Contract
    Playground.Interpreter.Util
    Playground.Schema
    Playground.TH
    Playground.Types
    PSGenerator.Common
    Schema
    Servant.Extra

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
    -Wall -Wcompat -Wunused-packages -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wmissing-import-lists
    -Wredundant-constraints

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-node-emulator      >=1.0.0
    , freer-extras               >=1.0.0
    , plutus-chain-index-core    >=1.0.0
    , plutus-contract            >=1.0.0
    , plutus-ledger              >=1.0.0
    , plutus-ledger-constraints  >=1.0.0
    , plutus-script-utils        >=1.0.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api        >=1.35
    , cardano-slotting
    , ouroboros-network
    , plutus-ledger-api  >=1.0.0
    , plutus-tx          >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , aeson-casing
    , base                >=4.7  && <5
    , bytestring
    , containers
    , cookie
    , cryptonite
    , data-default
    , deriving-compat
    , exceptions
    , foldl
    , freer-simple
    , http-client
    , http-client-tls
    , http-conduit
    , http-types
    , jwt
    , lens
    , monad-logger
    , mtl
    , newtype-generics
    , openapi3
    , prettyprinter
    , process
    , purescript-bridge
    , recursion-schemes   <5.2
    , row-types
    , servant             >=0.16
    , servant-client
    , servant-purescript
    , servant-server
    , streaming
    , template-haskell
    , text
    , time
    , time-out
    , time-units
    , transformers
    , uuid

test-suite playground-common-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  other-modules:
    Auth.TypesSpec
    Paths_playground_common
    Playground.TypesSpec
    SchemaSpec

  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wmissing-import-lists -Wredundant-constraints
    -fprint-potential-instances -Wunused-packages

  --------------------
  -- Local components
  --------------------
  build-depends:
    , playground-common  >=1.0.0
    , plutus-contract    >=1.0.0
    , plutus-ledger      >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base               >=4.7 && <5
    , bytestring
    , recursion-schemes  <5.2
    , tasty
    , tasty-hunit
    , text

------------------------------
-- vendored purescript-bridge
------------------------------

library purescript-bridge
  visibility:       public
  ghc-options:      -Wall
  hs-source-dirs:   purescript-bridge/src
  exposed-modules:
    Language.PureScript.Bridge
    Language.PureScript.Bridge.Builder
    Language.PureScript.Bridge.CodeGenSwitches
    Language.PureScript.Bridge.Primitives
    Language.PureScript.Bridge.Printer
    Language.PureScript.Bridge.PSTypes
    Language.PureScript.Bridge.SumType
    Language.PureScript.Bridge.Tuple
    Language.PureScript.Bridge.TypeInfo
    Language.PureScript.Bridge.TypeParameters

  build-depends:
    , base              >=4.8 && <6.0
    , containers
    , directory
    , filepath
    , generic-deriving
    , lens
    , mtl
    , text
    , transformers
    , wl-pprint-text

  default-language: Haskell2010

-------------------------------
-- vendored servant-purescript
-------------------------------

library servant-purescript
  visibility:       public
  ghc-options:      -Wall
  hs-source-dirs:   servant-purescript/src
  exposed-modules:
    Servant.API.BrowserHeader
    Servant.PureScript
    Servant.PureScript.CodeGen
    Servant.PureScript.Internal

  build-depends:
    , aeson              >=0.11.2
    , base               >=4.7    && <6.0
    , bytestring
    , containers
    , directory
    , filepath
    , http-types
    , lens
    , mainland-pretty
    , purescript-bridge
    , servant
    , servant-foreign
    , servant-server
    , text
    , wl-pprint-text

  default-language: Haskell2010
