cabal-version: 2.2
name: plutus-chain-index-core
version: 0.1.0.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
maintainer: sjoerd.visscher@iohk.io
author: Sjoerd Visscher
homepage: https://github.com/iohk/plutus#readme
bug-reports: https://github.com/iohk/plutus/issues
description:
    Please see the README on GitHub at <https://github.com/input-output-hk/plutus#readme>
build-type: Simple

source-repository head
    type: git
    location: https://github.com/input-output-hk/plutus-apps

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
    import: lang
    exposed-modules:
        Plutus.ChainIndex
        Plutus.ChainIndex.Api
        Plutus.ChainIndex.ChainIndexError
        Plutus.ChainIndex.ChainIndexLog
        Plutus.ChainIndex.Client
        Plutus.ChainIndex.DbSchema
        Plutus.ChainIndex.Effects
        Plutus.ChainIndex.Emulator
        Plutus.ChainIndex.Emulator.DiskState
        Plutus.ChainIndex.Emulator.Handlers
        Plutus.ChainIndex.Emulator.Server
        Plutus.ChainIndex.Handlers
        Plutus.ChainIndex.Server
        Plutus.ChainIndex.Tx
        Plutus.ChainIndex.TxIdState
        Plutus.ChainIndex.TxOutBalance
        Plutus.ChainIndex.TxUtxoBalance
        Plutus.ChainIndex.Types
        Plutus.ChainIndex.UtxoState
        Plutus.Monitoring.Util
        Cardano.Protocol.Socket.Type
        Cardano.Protocol.Socket.Client
        Plutus.ChainIndex.Compatibility
        Plutus.Contract.CardanoAPI
    hs-source-dirs: src
    build-depends:
        plutus-ledger -any,
        plutus-ledger-api -any,
        plutus-script-utils -any,
        plutus-tx -any,
        freer-extras -any,
    build-depends:
        aeson -any,
        base >=4.7 && <5,
        beam-core -any,
        beam-sqlite -any,
        beam-migrate -any,
        cardano-api -any,
        cardano-ledger-byron -any,
        containers -any,
        contra-tracer -any,
        cryptonite -any,
        data-default -any,
        exceptions -any,
        fingertree -any,
        freer-simple -any,
        io-classes -any,
        iohk-monitoring -any,
        lens -any,
        memory -any,
        nothunks -any,
        openapi3 -any,
        ouroboros-network -any,
        ouroboros-network-framework -any,
        ouroboros-consensus -any,
        ouroboros-consensus-byron -any,
        ouroboros-consensus-cardano -any,
        ouroboros-consensus-shelley -any,
        prettyprinter >=1.1.0.1,
        retry -any,
        semigroups -any,
        serialise -any,
        sqlite-simple -any,
        typed-protocols -any,
        unordered-containers -any,
        bytestring -any,
        text -any,
        resource-pool -any,
        servant -any,
        servant-openapi3 -any,
        servant-server -any,
        servant-swagger-ui -any,
        stm -any,
        mtl -any,
        warp -any,
        servant-client -any,
        servant-client-core -any,
        http-types -any,
        text-class -any

test-suite plutus-chain-index-test
    import: lang
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    other-modules:
        Generators
        Plutus.ChainIndex.Emulator.DiskStateSpec
        Plutus.ChainIndex.Emulator.HandlersSpec
        Plutus.ChainIndex.HandlersSpec
        Util
    build-depends:
        plutus-ledger -any,
        plutus-ledger-api -any,
        plutus-tx -any,
        plutus-chain-index-core -any
    build-depends:
        base >=4.9 && <5,
        beam-migrate -any,
        beam-sqlite -any,
        bytestring -any,
        containers -any,
        contra-tracer -any,
        data-default -any,
        fingertree -any,
        freer-extras -any,
        freer-simple -any,
        hedgehog -any,
        lens -any,
        resource-pool -any,
        serialise -any,
        stm -any,
        sqlite-simple -any,
        tasty -any,
        tasty-hedgehog -any,
