cabal-version: 2.2
name:          plutus-chain-index-core
version:       0.1.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:    sjoerd.visscher@iohk.io
author:        Sjoerd Visscher
homepage:      https://github.com/input-output-hk/plutus-apps#readme
bug-reports:   https://github.com/input-output-hk/plutus-apps/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/plutus-apps#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Cardano.Protocol.Socket.Client
    Cardano.Protocol.Socket.Type
    Plutus.ChainIndex
    Plutus.ChainIndex.Api
    Plutus.ChainIndex.ChainIndexError
    Plutus.ChainIndex.ChainIndexLog
    Plutus.ChainIndex.Client
    Plutus.ChainIndex.Compatibility
    Plutus.ChainIndex.DbSchema
    Plutus.ChainIndex.Effects
    Plutus.ChainIndex.Emulator
    Plutus.ChainIndex.Emulator.DiskState
    Plutus.ChainIndex.Emulator.Handlers
    Plutus.ChainIndex.Emulator.Server
    Plutus.ChainIndex.Handlers
    Plutus.ChainIndex.Server
    Plutus.ChainIndex.Tx
    Plutus.ChainIndex.TxIdState
    Plutus.ChainIndex.TxOutBalance
    Plutus.ChainIndex.TxUtxoBalance
    Plutus.ChainIndex.Types
    Plutus.ChainIndex.UtxoState
    Plutus.Contract.CardanoAPI
    Plutus.Monitoring.Util

  hs-source-dirs:  src
  build-depends:
    , freer-extras
    , plutus-ledger
    , plutus-ledger-api
    , plutus-script-utils
    , plutus-tx

  build-depends:
    , aeson
    , base                         >=4.7     && <5
    , beam-core
    , beam-migrate
    , beam-sqlite
    , bytestring
    , cardano-api
    , cardano-ledger-byron
    , containers
    , contra-tracer
    , cryptonite
    , data-default
    , exceptions
    , fingertree
    , freer-simple
    , http-types
    , io-classes
    , iohk-monitoring
    , lens
    , memory
    , mtl
    , nothunks
    , openapi3
    , ouroboros-consensus
    , ouroboros-consensus-byron
    , ouroboros-consensus-cardano
    , ouroboros-consensus-shelley
    , ouroboros-network
    , ouroboros-network-framework
    , prettyprinter                >=1.1.0.1
    , resource-pool
    , retry
    , semigroups
    , serialise
    , servant
    , servant-client
    , servant-client-core
    , servant-openapi3
    , servant-server
    , servant-swagger-ui
    , sqlite-simple
    , stm
    , text
    , text-class
    , typed-protocols
    , unordered-containers
    , warp

test-suite plutus-chain-index-test
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:
    Generators
    Plutus.ChainIndex.Emulator.DiskStateSpec
    Plutus.ChainIndex.Emulator.HandlersSpec
    Plutus.ChainIndex.HandlersSpec
    Util

  build-depends:
    , plutus-chain-index-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx

  build-depends:
    , base            >=4.9 && <5
    , beam-migrate
    , beam-sqlite
    , bytestring
    , containers
    , contra-tracer
    , data-default
    , fingertree
    , freer-extras
    , freer-simple
    , hedgehog
    , lens
    , resource-pool
    , serialise
    , sqlite-simple
    , stm
    , tasty
    , tasty-hedgehog
