cabal-version: 3.0
name:          plutus-chain-index-core
version:       1.2.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:    sjoerd.visscher@iohk.io
author:        Sjoerd Visscher
homepage:      https://github.com/input-output-hk/plutus-apps#readme
bug-reports:   https://github.com/input-output-hk/plutus-apps/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/plutus-apps#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Cardano.Protocol.Socket.Client
    Cardano.Protocol.Socket.Type
    Plutus.ChainIndex
    Plutus.ChainIndex.Api
    Plutus.ChainIndex.ChainIndexError
    Plutus.ChainIndex.ChainIndexLog
    Plutus.ChainIndex.Client
    Plutus.ChainIndex.Compatibility
    Plutus.ChainIndex.DbSchema
    Plutus.ChainIndex.Effects
    Plutus.ChainIndex.Emulator
    Plutus.ChainIndex.Emulator.DiskState
    Plutus.ChainIndex.Emulator.Handlers
    Plutus.ChainIndex.Emulator.Server
    Plutus.ChainIndex.Handlers
    Plutus.ChainIndex.Server
    Plutus.ChainIndex.Tx
    Plutus.ChainIndex.TxIdState
    Plutus.ChainIndex.TxOutBalance
    Plutus.ChainIndex.TxUtxoBalance
    Plutus.ChainIndex.Types
    Plutus.ChainIndex.UtxoState
    Plutus.Contract.CardanoAPI
    Plutus.Monitoring.Util

  hs-source-dirs:  src

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-node-emulator  >=1.2.0
    , freer-extras           >=1.2.0
    , plutus-ledger          >=1.2.0
    , plutus-script-utils    >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api                  >=1.35
    , cardano-ledger-byron
    , cardano-ledger-core
    , io-classes
    , iohk-monitoring
    , ouroboros-consensus
    , ouroboros-consensus-byron
    , ouroboros-consensus-cardano
    , ouroboros-consensus-shelley
    , ouroboros-network
    , ouroboros-network-framework
    , plutus-core                  >=1.0.0
    , plutus-ledger-api            >=1.0.0
    , plutus-tx                    >=1.0.0
    , typed-protocols

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base                       >=4.9     && <5
    , beam-core
    , beam-migrate
    , beam-sqlite
    , bytestring
    , containers
    , contra-tracer
    , cryptonite
    , data-default
    , exceptions
    , fingertree
    , freer-simple
    , http-types
    , insert-ordered-containers
    , io-classes
    , iohk-monitoring
    , lens
    , memory
    , mtl
    , nothunks
    , openapi3
    , prettyprinter              >=1.1.0.1
    , resource-pool
    , retry
    , semigroups
    , serialise
    , servant
    , servant-client
    , servant-client-core
    , servant-openapi3
    , servant-server
    , servant-swagger-ui
    , sqlite-simple
    , stm
    , text
    , text-class
    , unordered-containers
    , warp

test-suite plutus-chain-index-test
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:
    Generators
    Plutus.ChainIndex.Emulator.DiskStateSpec
    Plutus.ChainIndex.Emulator.HandlersSpec
    Plutus.ChainIndex.HandlersSpec
    Util

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-node-emulator    >=1.2.0
    , freer-extras             >=1.2.0
    , plutus-chain-index-core  >=1.2.0
    , plutus-ledger            >=1.2.0
    , plutus-script-utils      >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , plutus-ledger-api  >=1.0.0
    , plutus-tx          >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base            >=4.9 && <5
    , beam-migrate
    , beam-sqlite
    , bytestring
    , containers
    , contra-tracer
    , data-default
    , fingertree
    , freer-simple
    , hedgehog
    , lens
    , resource-pool
    , serialise
    , sqlite-simple
    , stm
    , tasty
    , tasty-hedgehog
