cabal-version: 2.2
name: plutus-chain-index
version: 0.1.0.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
maintainer: sjoerd.visscher@iohk.io
author: Sjoerd Visscher
homepage: https://github.com/iohk/plutus#readme
bug-reports: https://github.com/iohk/plutus/issues
description:
    Please see the README on GitHub at <https://github.com/input-output-hk/plutus#readme>
build-type: Simple

source-repository head
    type: git
    location: https://github.com/input-output-hk/plutus-apps

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities -Wmissing-import-lists

library
    import: lang
    exposed-modules:
        Plutus.ChainIndex.App
        Plutus.ChainIndex.Events
        Plutus.ChainIndex.CommandLine
        Plutus.ChainIndex.Config
        Plutus.ChainIndex.Lib
        Plutus.ChainIndex.Logging
        Plutus.ChainIndex.SyncStats
    other-modules: Control.Concurrent.STM.TBMQueue
    hs-source-dirs: src
    build-depends:
        plutus-ledger -any,
        plutus-ledger-api -any,
        plutus-chain-index-core -any,
        freer-extras -any
    build-depends:
        aeson -any,
        async -any,
        base >=4.7 && <5,
        beam-sqlite -any,
        beam-migrate -any,
        cardano-api -any,
        contra-tracer -any,
        clock -any,
        data-default -any,
        freer-simple -any,
        iohk-monitoring -any,
        lens -any,
        optparse-applicative -any,
        ouroboros-network -any,
        prettyprinter >=1.1.0.1,
        sqlite-simple -any,
        stm -any,
        time-units -any,
        yaml -any,

executable plutus-chain-index
  main-is: Main.hs
  hs-source-dirs: app
  default-language: Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
        -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wno-missing-import-lists -Wredundant-constraints -O0
  build-depends:
    base >=4.9 && <5,
    plutus-chain-index -any
