cabal-version: 2.2
name: plutus-chain-index
version: 0.1.0.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
maintainer: sjoerd.visscher@iohk.io
author: Sjoerd Visscher
homepage: https://github.com/iohk/plutus#readme
bug-reports: https://github.com/iohk/plutus/issues
description:
    Please see the README on GitHub at <https://github.com/input-output-hk/plutus#readme>
build-type: Simple

source-repository head
    type: git
    location: https://github.com/input-output-hk/plutus-apps

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities -Wmissing-import-lists

library
    import: lang
    exposed-modules:
        Plutus.ChainIndex.App
        Plutus.ChainIndex.Events
        Plutus.ChainIndex.CommandLine
        Plutus.ChainIndex.Config
        Plutus.ChainIndex.Lib
        Plutus.ChainIndex.Logging
        Plutus.ChainIndex.SyncStats
    other-modules:
        Control.Concurrent.STM.TBMQueue
    hs-source-dirs: src
    build-depends:
        plutus-ledger,
        plutus-ledger-api,
        plutus-chain-index-core,
        freer-extras
    build-depends:
        aeson,
        async,
        base >=4.7 && <5,
        beam-sqlite,
        beam-migrate,
        cardano-api,
        contra-tracer,
        clock,
        data-default,
        freer-simple,
        iohk-monitoring,
        lens,
        optparse-applicative,
        ouroboros-network,
        prettyprinter >=1.1.0.1,
        resource-pool,
        sqlite-simple,
        stm,
        time-units,
        yaml,

executable plutus-chain-index
  main-is: Main.hs
  hs-source-dirs: app
  default-language: Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
        -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wno-missing-import-lists -Wredundant-constraints -O0
  build-depends:
    base >=4.9 && <5,
    plutus-chain-index

executable marconi
  main-is: Marconi.hs
  hs-source-dirs: app
  other-modules:
    Marconi.Index.Datum
    Marconi.Logging
  default-language: Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
        -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wno-missing-import-lists -Wredundant-constraints -O0
  build-depends:
    base >=4.9 && <5,
    bytestring,
    cardano-api,
    containers,
    hysterical-screams,
    iohk-monitoring,
    lens,
    optparse-applicative,
    plutus-chain-index,
    plutus-chain-index-core,
    plutus-ledger,
    plutus-script-utils,
    plutus-streaming,
    serialise,
    sqlite-simple,
    streaming,
    text,
    time,
