cabal-version: 2.2
name:          plutus-chain-index
version:       1.2.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:    sjoerd.visscher@iohk.io
author:        Sjoerd Visscher
homepage:      https://github.com/input-output-hk/plutus-apps#readme
bug-reports:   https://github.com/input-output-hk/plutus-apps/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/plutus-apps#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-import-lists

library
  import:          lang
  exposed-modules:
    Plutus.ChainIndex.App
    Plutus.ChainIndex.CommandLine
    Plutus.ChainIndex.Config
    Plutus.ChainIndex.Events
    Plutus.ChainIndex.Lib
    Plutus.ChainIndex.Logging
    Plutus.ChainIndex.SyncStats

  other-modules:   Control.Concurrent.STM.TBMQueue
  hs-source-dirs:  src

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-node-emulator         >=1.2.0
    , cardano-node-socket-emulator  >=1.2.0
    , freer-extras                  >=1.2.0
    , plutus-chain-index-core       >=1.2.0
    , plutus-ledger                 >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api        >=1.35
    , iohk-monitoring
    , ouroboros-network
    , plutus-ledger-api  >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , async
    , base                  >=4.7     && <5
    , beam-migrate
    , beam-sqlite
    , clock
    , contra-tracer
    , data-default
    , freer-simple
    , lens
    , optparse-applicative
    , prettyprinter         >=1.1.0.1
    , resource-pool         <0.4.0.0
    , sqlite-simple
    , stm
    , time-units
    , yaml

executable plutus-chain-index
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wno-missing-import-lists -Wredundant-constraints -O0

  build-depends:
    , base                >=4.9 && <5
    , plutus-chain-index
