cabal-version: 3.0
name: plutus-contract-certification
version: 0.1.0.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
homepage: https://github.com/iohk/plutus-apps#readme
bug-reports: https://github.com/iohk/plutus-apps/issues
description:
    Please see the README on GitHub at <https://github.com/input-output-hk/plutus-apps#readme>
build-type: Simple

source-repository head
    type: git
    location: https://github.com/input-output-hk/plutus-apps

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                        DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities
                 -- See Plutus Tx readme
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: lang
    exposed-modules:
        Plutus.Contract.Test.Certification
        Plutus.Contract.Test.Certification.Run
    hs-source-dirs: src
    build-depends:
        base >=4.7 && <5,
        containers -any,
        lens -any,
        plutus-contract -any,
        plutus-tx -any,
        QuickCheck -any,
        stm -any,
        tasty -any,
        aeson -any,
        splitmix -any,
        bytestring -any,
        mtl -any
