cabal-version: 3.0
name:          plutus-contract-certification
version:       1.2.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

homepage:      https://github.com/input-output-hk/plutus-apps-apps#readme
bug-reports:   https://github.com/input-output-hk/plutus-apps-apps/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/plutus-apps#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
  import:          lang
  exposed-modules:
    Plutus.Contract.Test.Certification
    Plutus.Contract.Test.Certification.Run

  hs-source-dirs:  src

  --------------------
  -- Local components
  --------------------
  build-depends:   plutus-contract >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , plutus-tx           >=1.0.0
    , quickcheck-dynamic  >=2.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base        >=4.7 && <5
    , bytestring
    , containers
    , lens
    , mtl
    , QuickCheck
    , splitmix
    , stm
    , tasty
