cabal-version: 3.0
name:          plutus-contract-model
version:       1.2.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:    jann.mueller@iohk.io
author:        Jann Müller
homepage:      https://github.com/input-output-hk/plutus-apps#readme
bug-reports:   https://github.com/input-output-hk/plutus-apps/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/plutus-apps#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

library
  import:          lang
  exposed-modules:
    Plutus.Contract.Test.ContractModel
    Plutus.Contract.Test.ContractModel.CrashTolerance
    Plutus.Contract.Test.ContractModel.Interface
    Plutus.Contract.Test.ContractModel.Internal
    Plutus.Contract.Test.ContractModel.Internal.ContractInstance

  hs-source-dirs:  src

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-node-emulator  >=1.2.0
    , plutus-contract        >=1.2.0
    , plutus-ledger          >=1.2.0
    , plutus-script-utils    >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api               >=1.35
    , plutus-ledger-api         >=1.0.0
    , plutus-tx                 >=1.0.0
    , quickcheck-contractmodel  >=0.1.4.0
    , quickcheck-dynamic        >=3.0.2

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson          >=2
    , base           >=4.7     && <5
    , containers
    , deepseq
    , freer-simple
    , lens
    , mtl
    , prettyprinter  >=1.1.0.1
    , QuickCheck
    , row-types      >=1.0.1.0
    , text
    , transformers

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

test-suite plutus-contract-model-test
  import:             lang
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -rtsopts -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas

  hs-source-dirs:     test
  other-modules:      Spec.ErrorChecking

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-node-emulator  >=1.2.0
    , freer-extras           >=1.2.0
    , plutus-contract        >=1.2.0
    , plutus-contract-model  >=1.2.0
    , plutus-ledger          >=1.2.0
    , plutus-script-utils    >=1.2.0
    , plutus-tx-constraints  >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , plutus-ledger-api         >=1.0.0
    , plutus-tx                 >=1.0.0
    , plutus-tx-plugin          >=1.0.0.0
    , quickcheck-contractmodel  >=0.1.4.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base              >=4.9 && <5
    , lens
    , QuickCheck
    , row-types
    , tasty
    , tasty-hunit
    , tasty-quickcheck
